add empathy_individual_manager_unprepare_async()

https://bugzilla.gnome.org/show_bug.cgi?id=660128